--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -89,6 +89,23 @@
             transform: scale(1.05);
         }
 </style>
+<AuthorizeView>
+    <Authorized>
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+            (function () {
+                var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+                s1.async = true;
+                s1.src = 'https://embed.tawk.to/6761ae4349e2fd8dfef98155/1ifap1ema';
+                s1.charset = 'UTF-8';
+                s1.setAttribute('crossorigin', '*');
+                s0.parentNode.insertBefore(s1, s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
+    </Authorized>
+</AuthorizeView>
 @code {
     private List<Product> products = new List<Product>();
     private Product product = new Product();
