Thêm km, top bán chạy, sửa logic vân đơn

--- a/Components/Pages/Ql/VanDon.razor
+++ b/Components/Pages/Ql/VanDon.razor
@@ -10,26 +10,26 @@
 
 <style>
     .clickable-cell {
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
     }
 
-        .clickable-cell:hover {
-           color: #f0f0f0;
-        }
-
-    .mud-large{
-        width: 100%;
-        max-width: 80em !important;
+    .clickable-cell:hover {
+    color: #f0f0f0;
     }
 
-    .img-product{
-        max-width: 100px;
-        width: fit-content;
+    .mud-large {
+    width: 100%;
+    max-width: 80em !important;
     }
 
-    .img-show{
-        max-width: 100px;
+    .img-product {
+    max-width: 100px;
+    width: fit-content;
+    }
+
+    .img-show {
+    max-width: 100px;
     }
 </style>
 
@@ -50,7 +50,7 @@
     </HeaderContent>
 
     <RowTemplate>
-        <MudTd class="clickable-cell" DataLabel="Bill ID" @onclick="() => OpenProductDetails(context.BillId)">@context.BillId</MudTd>
+        <MudTd class="clickable-cell" DataLabel="Bill ID" >@context.BillId</MudTd>
         <MudTd DataLabel="Tên người dùng">@context.UserName</MudTd>
         <MudTd DataLabel="Phương thức">@context.PayStatus</MudTd>
         <MudTd DataLabel="Tổng giá">@context.TotalPrice.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))</MudTd>
@@ -59,9 +59,16 @@
             @(context.ApproveBill ? "Đã duyệt" : "Chưa duyệt")
         </MudTd>
 
+
         <MudTd DataLabel="Tác vụ">
-            <MudButton Color="Color.Primary" OnClick="() => HandleApprove(context)">Duyệt đơn</MudButton>
-            <MudButton Color="Color.Error" OnClick="() => HandleDelete(context)">Xóa đơn</MudButton>
+            <MudMenu Icon="@Icons.Material.Filled.MoreVert" AriaLabel="Open user menu">                    
+                <MudMenuItem OnClick="() => HandleApprove(context)">Duyệt đơn</MudMenuItem>
+                <MudMenuItem OnClick="() => OpenProductDetails(context.BillId)">Cho hàng đi</MudMenuItem>
+                <MudMenuItem OnClick="() => HandleDelete(context)">Xóa đơn</MudMenuItem>
+                <MudMenuItem OnClick="() => CompleteApprove(context)">Giao thành công</MudMenuItem>
+            </MudMenu>
+            @* <MudButton Color="Color.Primary" OnClick="() => HandleApprove(context)">Duyệt đơn</MudButton>
+            <MudButton Color="Color.Error" OnClick="() => HandleDelete(context)">Xóa đơn</MudButton> *@
         </MudTd>
     </RowTemplate>
 
@@ -91,7 +98,7 @@
                     @foreach (var warehouse in WarehouseList)
                     {
                         <MudSelectItem T="int" Value="@warehouse.WarehouseID"
-                                       Selected="@(warehouse.WarehouseID == productList.FirstOrDefault()?.Bills.WarehouseID)">
+                        Selected="@(warehouse.WarehouseID == productList.FirstOrDefault()?.Bills.WarehouseID)">
                             @warehouse.NameWarehouse
                         </MudSelectItem>
                     }
@@ -104,7 +111,7 @@
                     @foreach (var delivery in DeliveryList)
                     {
                         <MudSelectItem T="int" Value="@delivery.DeliveryId"
-                                       Selected="@(delivery.DeliveryId == productList.FirstOrDefault()?.Bills.DeliveryId)">
+                        Selected="@(delivery.DeliveryId == productList.FirstOrDefault()?.Bills.DeliveryId)">
                             @delivery.DeliveryName
                         </MudSelectItem>
                     }
@@ -115,12 +122,12 @@
                 <MudText Typo="Typo.h6">Địa chỉ người dùng Address</MudText>
                 <MudText>@(AddressUser != null ? AddressUser.DetailAddress : "Không tìm thấy địa chỉ người dùng")</MudText>
             </MudItem>
-          
+
         </MudGrid>
         <MudText Class="mb-2 mt-3" Typo="Typo.h6" Align="Align.Center">Danh sách sản phẩm</MudText>
 
         <MudTable Items="productList" Bordered="true" Dense="true" Hover="true">
-          
+
             <HeaderContent>
                 <MudTh>Ảnh sản phẩm</MudTh>
                 <MudTh>Tên sản phẩm</MudTh>
@@ -139,12 +146,12 @@
     </DialogContent>
     <DialogActions>
         <MudButton Color="Color.Secondary" OnClick="CloseDialog">Đóng</MudButton>
-      @if (selectedDeliveryId != productList.FirstOrDefault()?.Bills.DeliveryId)
-{
-    <MudButton Color="Color.Primary" OnClick="async () => await ConfirmDeliveryChange(productList.FirstOrDefault()?.Bills.BillId)">
-        Xác nhận
-    </MudButton>
-}
+        @if (selectedDeliveryId != productList.FirstOrDefault()?.Bills.DeliveryId)
+        {
+            <MudButton Color="Color.Primary" OnClick="async () => await ConfirmDeliveryChange(productList.FirstOrDefault()?.Bills.BillId)">
+                Xác nhận
+            </MudButton>
+        }
 
     </DialogActions>
 </MudDialog>
@@ -187,7 +194,7 @@
 
     private void CloseDialog()
     {
-        _productDetailsDialog?.CloseAsync(DialogResult.Ok(true)); 
+        _productDetailsDialog?.CloseAsync(DialogResult.Ok(true));
     }
 
     private async Task<TableData<BillVanDonDTO>> LoadServerData(TableState tableState, CancellationToken cancellationToken)
@@ -218,7 +225,7 @@
         try
         {
 
-            bool duyet =  await BillService.ApproveProductBillAsync(bill);
+            bool duyet = await BillService.ApproveProductBillAsync(bill);
             if (duyet)
             {
                 await DialogService.ShowMessageBox("Thành Công", "Đơn hàng đã được duyệt thành công.");
@@ -226,7 +233,7 @@
                 if (updatedBill != null)
                 {
                     updatedBill.ApproveBill = true;
-                    updatedBill.Status = "Completed";
+                    updatedBill.Status = "Chờ lấy hàng";
                 }
 
                 StateHasChanged();
@@ -256,7 +263,7 @@
                 var deletedBill = pagedItems.FirstOrDefault(b => b.BillId == bill.BillId);
                 if (deletedBill != null)
                 {
-                    pagedItems.Remove(deletedBill); 
+                    pagedItems.Remove(deletedBill);
                 }
 
                 StateHasChanged();
@@ -273,15 +280,47 @@
 
         }
     }
+    private async Task CompleteApprove(BillVanDonDTO bill)
+    {
+        try
+        {
+
+            bool duyet = await BillService.CompleteProductBillAsync(bill);
+            if (duyet)
+            {
+                await DialogService.ShowMessageBox("Thành Công", "Đơn hàng đã được giao thành công.");
+                var updatedBill = pagedItems.FirstOrDefault(b => b.BillId == bill.BillId);
+                if (updatedBill != null)
+                {
+                    updatedBill.ApproveBill = true;
+                    updatedBill.Status = "Đã giao hàng";
+                }
+
+                StateHasChanged();
+            }
+            else
+            {
+                await DialogService.ShowMessageBox("Lỗi đơn", "Đơn chưa được duyệt");
+
+            }
+
+        }
+        catch (Exception ex)
+        {
+            await DialogService.ShowMessageBox("Lỗi đơn", "Đã xảy ra lỗi.");
+
+        }
+    }
     private void OnDeliveryChange(int newValue)
     {
         selectedDeliveryId = newValue;
-    } 
+    }
     private void OnWarehouseChange(int newValue)
     {
         selectedWarehouseId = newValue;
     }
     private async Task ConfirmDeliveryChange(int? billID)
+
     {
         var (delivery, code, message) = await BillService.SetDeliveryBill(billID, selectedDeliveryId, selectedWarehouseId);
         string dialogTitle = code == 200 ? "Thành Công" : "Lỗi";
