--- a/Components/Pages/Ql/Thongkedoanhthu.razor
+++ b/Components/Pages/Ql/Thongkedoanhthu.razor
@@ -71,13 +71,17 @@ else if (userRoleId == "3")
 
                     <HeaderContent>
                         <MudTh Style=" text-align:center">Đối tượng</MudTh>
+                        <MudTh Style="text-align:center">BillID</MudTh>
                         <MudTh Style="text-align:center">Tổng tiền</MudTh>
                         <MudTh Style="text-align:center">Trạng thái</MudTh>
                         <MudTh Style="text-align:center">Ngày</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd DataLabel="Đối tượng" Style="min-width: 50vw; text-align:left; position: sticky; left: 0; z-index: 1; background-color: white;">
-                            @context["UserName"].ToString() - @context["BillId"]
+                        <MudTd DataLabel="Đối tượng" Style="text-align:right;">
+                            @context["UserName"].ToString()
+                        </MudTd>
+                        <MudTd DataLabel="BillID" Style="text-align:right;">
+                           @context["BillId"]
                         </MudTd>
                         <MudTd Style="text-align:right;" DataLabel="Tổng tiền">
                             @(string.IsNullOrEmpty(context["TotalPrice"].ToString()) ? "0" : Convert.ToDecimal(context["TotalPrice"]).ToString("#,##0")) vnđ
@@ -160,14 +164,18 @@ else if (userRoleId == "1")
                           T="DataRow" MultiSelection="false" RowClass="pa-0 cursor-pointer" Hover="true" Breakpoint="Breakpoint.None"
                           @bind-SelectedItem="@selectedItem" HorizontalScrollbar="true">
                     <HeaderContent>
-                        <MudTh Style="text-align:center">Đối tượng</MudTh>
+                        <MudTh Style=" text-align:center">Đối tượng</MudTh>
+                        <MudTh Style="text-align:center">BillID</MudTh>
                         <MudTh Style="text-align:center">Tổng tiền</MudTh>
                         <MudTh Style="text-align:center">Trạng thái</MudTh>
                         <MudTh Style="text-align:center">Ngày</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd DataLabel="Đối tượng" Style="min-width: 50vw; text-align:left; position: sticky; left: 0; z-index: 1; background-color: white;">
-                            @context["UserName"].ToString() - @context["BillId"]
+                        <MudTd DataLabel="Đối tượng" Style="text-align:right;">
+                            @context["UserName"].ToString() 
+                        </MudTd>
+                        <MudTd DataLabel="BillID" Style="text-align:right;">
+                            @context["BillId"]
                         </MudTd>
                         <MudTd Style="text-align:right;" DataLabel="Tổng tiền">
                             @(string.IsNullOrEmpty(context["TotalPrice"].ToString()) ? "0" : Convert.ToDecimal(context["TotalPrice"]).ToString("#,##0")) vnđ
@@ -276,8 +284,6 @@ else if (userRoleId == "1")
         var result = await BillService.GetDoanhThuThangHienTai(currentDate);
         Console.WriteLine($"result.doanhThu:{result.doanhThu}");
         duDoanDoanhThu = DuDoanDoanhThuThangToi(result.doanhThu, 0.05m);
-
-        // bills = await BillService.GetAllbill();
         await LoadBills();
     }
 
@@ -291,7 +297,7 @@ else if (userRoleId == "1")
     //     CultureInfo culture = CultureInfo.GetCultureInfo("vi-VN");
     //     StateHasChanged();
     // }
-    private string userRoleId;
+    private string? userRoleId;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
